--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -8,3 +8,16 @@ confirm password: confirmation du mot de passe
 Logout: déconnexion
 welcome: bienvenue
 admin: administration
+ajout_restau_titre: ajouter votre restaurant
+restaurant:
+  nom: Nom du restaurant
+  adresse: Adresse
+  cp: Code postal
+  ville: Ville
+  tel: Numéro de téléphone
+  email: Adresse mail
+  site_web: Site web
+  horaire: Horaires
+  type: Type de nourriture
+  photo: Vos photos
+  save: Créer
