--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -14,6 +14,8 @@ form:
   save: valider
 
 ajout_restau_titre: ajouter votre restaurant
+ajout_entree_titre: ajouter votre entrée
+
 restaurant:
   nom: Nom du restaurant
   adresse: Adresse
