--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -15,7 +15,9 @@ form:
 
 ajout_restau_titre: ajouter votre restaurant
 ajout_entree_titre: ajouter votre entrée
-
+ajout_plat_titre:  ajouter votre plat
+ajout_dessert_titre:  ajouter votre dessert
+ajout_boisson_titre:  ajouter votre boisson
 restaurant:
   nom: Nom du restaurant
   adresse: Adresse
