--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -4,25 +4,29 @@ global:
   login: connexion
   logout: déconnexion
   admin: administration
+  no_account: pas de compte ?
+  contact: contact
 
 form:
   username: nom d'utilisateur
   email: adresse email
   password: mot de passe
-  confirm-password: confirmation du mot de passe
-  passwords-must-match: les mots de passe doivent correspondre
+  confirm_password: confirmation du mot de passe
+  passwords_must_match: les mots de passe doivent correspondre
+  message: message
+  send: envoyer
   save: valider
 
 ajout_restau_titre: ajouter votre restaurant
 restaurant:
-  nom: Nom du restaurant
-  adresse: Adresse
-  cp: Code postal
-  ville: Ville
-  tel: Numéro de téléphone
-  email: Adresse mail
-  site_web: Site web
-  horaire: Horaires
-  type: Type de nourriture
-  photo: Vos photos
-  save: Créer
+  nom: nom du restaurant
+  adresse: adresse
+  cp: code postal
+  ville: ville
+  tel: numéro de téléphone
+  email: adresse mail
+  site_web: site web
+  horaires: horaires
+  type: type de nourriture
+  photo: photos
+  save: créer
