--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -16,27 +16,33 @@ form:
   message: message
   send: envoyer
   save: valider
+  entree: nom de l'entrée
+  plat: nom du plat
+  dessert: nom du dessert
+  boisson: nom de la boisson
 
 titre:
-  restau: ajouter votre restaurant
+  restaurant: ajouter votre restaurant
   entree: ajouter votre entrée
   plat:  ajouter votre plat
   dessert:  ajouter votre dessert
   boisson:  ajouter votre boisson
 
 restaurant:
-entree:
-  nom: Nom de l'entrée
-plat:
-  nom: Nom du plat
-dessert:
-  nom: Nom du dessert
-boisson:
-  nom: Nom de la boisson
-  
+  nom: nom du restaurant
+  adresse: adresse
+  cp: code postal
+  ville: ville
+  tel: numéro de téléphone
+  email: adresse mail
+  site_web: site web
+  horaire: horaires
+  type: type de nourriture
+  photos: photos
+  save: créer
 
 carte:
-  description: Description
-  quantite: Quantité
-  prix: Prix
-  save: Ajouter
+  description: description
+  quantite: quantité
+  prix: prix
+  save: ajouter
