--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -6,6 +6,9 @@ global:
   admin: administration
   no_account: pas de compte ?
   contact: contactez le restaurateur
+  nom: nom
+  filtre: filtre
+  restaurant_detail: détail de
 
 form:
   username: nom d'utilisateur
@@ -37,6 +40,7 @@ titre:
   boisson:  ajouter votre boisson
 
 restaurant:
+  liste: liste des restaurants
   nom: nom du restaurant
   adresse: adresse
   cp: code postal
@@ -48,9 +52,23 @@ restaurant:
   type: type de nourriture
   photos: photos
   save: créer
+  add: ajouter un restaurant
+  update: modifier
+  details: voir le detail
+  detail: détail
+  contact: contacter le restaurateur
 
 carte:
+  nom: nom
   description: description
   quantite: quantité
   prix: prix
   save: ajouter
+  entree: entree
+  plat: plat
+  dessert: dessert
+  boisson: boisson
+  link_entree: ajouter une entrée
+  link_plat: ajouter un plat
+  link_dessert: ajouter un dessert
+  link_boisson: ajouter une boisson
